# Data_Challenge_Idemia

./: .gitignore  README.md  eda.ipynb  main.py  pyproject.toml
configs/: full_l.yaml  full_vitl.yaml  gender_b_lora.yaml  lora_b_full.yaml  lora_b_linear.yaml  lora_b_plain.yaml  lora_b_sampler.yaml  lora_vitb.yaml
scripts/: calibrate.py  diagnose.py  ensemble.py  extract_embeddings.py  level_down.py  predict_gender.py  run_kfold.sh  summarize.py  sweep.sh  train.py  train_gender.py  train_head.py  tta.py
src/: config.py  utils.py
src/ml/: extract_embeddings.py  train.py  train_gradient_boosting.py  train_head.py
src/ml/core/: dataset.py  losses.py  metrics.py
src/ml/models/: dinov2.py
src/occlusion/: config.py  utils.py
src/occlusion/ml/: run_config.py
src/occlusion/ml/core/: dataset.py  engine.py  gender.py  losses.py  metrics.py  sampler.py
src/occlusion/ml/models/: dinov2.py
