[project]
name = "data-challenge-idemia"
version = "0.1.0"
description = "Face occlusion regression - Idemia data challenge"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "matplotlib>=3.8",
    "torch>=2.11.0 ; sys_platform == 'linux'",
    "torch>=2.4 ; sys_platform == 'darwin'",
    "torchvision>=0.26.0 ; sys_platform == 'linux'",
    "torchvision>=0.19 ; sys_platform == 'darwin'",
    "lightgbm>=4.6.0",
    "xgboost>=3.2.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]
torchvision = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
